--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13875,3 +13875,31 @@ html:not([dir=rtl]) .wrapper {
 }
 
 /*# sourceMappingURL=style.css.map */
+
+/* loading */
+.loading {
+  position: fixed;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffffa6;
+  visibility: hidden;
+  opacity: 0;
+
+  transition: visibility 0s linear 0.33s, opacity 0.33s linear;
+}
+
+.loading.show {
+  visibility: visible;
+  opacity: 1;
+
+  transition-delay: 0s;
+}
+
+.loading-center {
+  z-index: 9999;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
