--- a/public/landing/stylesheet/style.css
+++ b/public/landing/stylesheet/style.css
@@ -1468,7 +1468,8 @@ button.btn.btn-outline-primary {
     position: relative;
     height: 300px;
     background-size: cover;
-    background-image: url(../images/home/background-slider.jpg);
+    background-color: #fff;
+    /* background-image: url(../images/home/background-slider.jpg); */
     background-repeat: no-repeat;
     background-position: center;
 }
