--- a/public/landing/stylesheet/style.css
+++ b/public/landing/stylesheet/style.css
@@ -2457,7 +2457,7 @@ article.post .content-post .more-link a:hover {
     position: relative;
     height: auto;
     background-color: var(--primary-color2);
-    background-image: url(../images/mask-back-ground/Mask-group-6.png);
+    background-image: url(../images/home/sincerely.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
