gek ndang di pull maszeh

--- a/public/landing/stylesheet/style.css
+++ b/public/landing/stylesheet/style.css
@@ -1467,6 +1467,10 @@ button.btn.btn-outline-primary {
 
 /* Page Title 
 -------------------------------------------------------------------------------------------*/
+.progress {
+    width: 212px;
+  }
+
 
 .inner-title {
     position: relative;
