Title Coloring Black+Detail News Content

--- a/public/landing/stylesheet/style.css
+++ b/public/landing/stylesheet/style.css
@@ -424,6 +424,7 @@ h5,
 h6 {
     font-family: 'Rubik', sans-serif;
     font-weight: 700;
+    color:#181818;
 }
 
 .left {
@@ -559,7 +560,7 @@ h6 {
 }
 
 
-/* link style 1 
+/* link style 1
 ---------------------------------------------------------------*/
 
 a {
@@ -585,7 +586,7 @@ a:focus {
 }
 
 
-/* link tyle 2 
+/* link tyle 2
 --------------------------------------------------------------------*/
 
 .link-style2 a {
@@ -663,7 +664,7 @@ a:focus {
 }
 
 
-/* link style 5 
+/* link style 5
 ---------------------------------------------------------------*/
 
 .link-style5 a {
@@ -690,7 +691,7 @@ a:focus {
 }
 
 
-/* link style 6 
+/* link style 6
 ---------------------------------------------------------------*/
 
 .link-style6 a {
@@ -755,7 +756,7 @@ a:focus {
 }
 
 
-/* root 
+/* root
 ---------------------------------------------------------------*/
 :root {
     /* color */
@@ -1014,7 +1015,7 @@ header.fixed-header {
     position: fixed;
     left: 0;
     top: 0;
-    width: 100%;    
+    width: 100%;
     z-index: 999;
     box-shadow: 1px 1px 5px 0px rgb(0 0 0 / 20%);
   }
@@ -1067,7 +1068,7 @@ header.fixed-header {
 }
 
 
-/* ripper effect 
+/* ripper effect
 --------------------------------------------------------------*/
 
 .ripple,
@@ -1125,7 +1126,7 @@ header.fixed-header {
 }
 
 
-/* Header 
+/* Header
 ---------------------------------------------------------------*/
 
 .top-header {
@@ -1275,7 +1276,7 @@ button.btn.btn-outline-primary {
 }
 
 
-/* show search header 
+/* show search header
 --------------------------------------------------------------*/
 
 .flat-show-search {
@@ -1366,7 +1367,7 @@ button.btn.btn-outline-primary {
 }
 
 
-/* Sub-menu 
+/* Sub-menu
 ---------------------------------------------------------------*/
 
 #mainnav .menu>li>.sub-menu {
@@ -1380,10 +1381,10 @@ button.btn.btn-outline-primary {
     box-shadow: -2px 6px 23px #b4b4b44f;
     visibility: hidden;
     -webkit-transition: all 0.3s ease;
-     -moz-transition: all 0.3s ease; 
+     -moz-transition: all 0.3s ease;
      -ms-transition: all 0.3s ease;
       -o-transition: all 0.3s ease;
-       transition: all 0.3s ease; 
+       transition: all 0.3s ease;
        -webkit-transform: translateY(15px);
        -moz-transform: translateY(15px);
         -ms-transform: translateY(15px);
@@ -1396,11 +1397,11 @@ button.btn.btn-outline-primary {
     opacity: 1;
     z-index: 100;
     left: 0;
-    visibility: visible; 
+    visibility: visible;
   -webkit-transform: translateY(0);
-  -moz-transform: translateY(0); 
+  -moz-transform: translateY(0);
   -ms-transform: translateY(0);
-   -o-transform: translateY(0); 
+   -o-transform: translateY(0);
    transform: translateY(0);
 }
 
@@ -1426,26 +1427,26 @@ button.btn.btn-outline-primary {
     color: #ffff !important;
 }
 
-#mainnav > ul > li > a::before { 
-    content: ""; 
-    position: absolute; 
-    bottom: 20px; 
-    left: 0; 
-    width: 0%; 
-    height: 3px; 
-    background-color: var(--primary-color); 
-    opacity: 0; 
-    visibility: hidden;  
-    -webkit-transition: all 0.3s ease; 
-    -moz-transition: all 0.3s ease; 
-    -ms-transition: all 0.3s ease; 
-    -o-transition: all 0.3s ease; 
-    transition: all 0.3s ease; 
+#mainnav > ul > li > a::before {
+    content: "";
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    width: 0%;
+    height: 3px;
+    background-color: var(--primary-color);
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
 }
 #mainnav > ul > li.current-menu-item > a::before ,
-#mainnav > ul > li > a:hover::before { 
-    opacity: 1; 
-    visibility: visible; 
+#mainnav > ul > li > a:hover::before {
+    opacity: 1;
+    visibility: visible;
     width: 100%;
 }
 
@@ -1465,7 +1466,7 @@ button.btn.btn-outline-primary {
     margin-left: 4px;
 }
 
-/* Page Title 
+/* Page Title
 -------------------------------------------------------------------------------------------*/
 .progress {
     width: 212px;
@@ -1530,7 +1531,7 @@ button.btn.btn-outline-primary {
 }
 
 
-/* home02 slider 
+/* home02 slider
 ---------------------------------------------------------------*/
 
 .slider-home02 {
@@ -1553,7 +1554,7 @@ button.btn.btn-outline-primary {
 }
 
 
-/* artical 
+/* artical
 ---------------------------------------------------------------*/
 
 .post-wrap .image-box {
@@ -1624,7 +1625,7 @@ article.article-4 {
 }
 
 
-/* blog detail 
+/* blog detail
 ---------------------------------------------------------------*/
 
 .flat-blog-standard {
@@ -1914,7 +1915,7 @@ article.article-4 {
 }
 
 
-/* Main Content 
+/* Main Content
 ---------------------------------------------------------------*/
 
 .wrap-post {
@@ -2454,7 +2455,7 @@ article.post .content-post .more-link a:hover {
 }
 
 
-/* footer 
+/* footer
 --------------------------------------------------------------*/
 
 .footer {
