--- a/public/landing/stylesheet/style.css
+++ b/public/landing/stylesheet/style.css
@@ -194,7 +194,7 @@ input::-moz-focus-inner {
 body {
     font: 16px/30px 'Rubik', sans-serif;
     background-color: #fff;
-    color: #fff;
+    color: #181818;
 }
 
 ul,
