--- a/public/landing/stylesheet/style.css
+++ b/public/landing/stylesheet/style.css
@@ -1027,10 +1027,11 @@ header.fixed-header {
     -ms-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease;
+    width: auto;
 }
 
 .grow-up-hover:hover img {
-    transform: scale(1.1);
+    transform: scale(0.8);
 }
 
 .hover-up {
@@ -1481,6 +1482,15 @@ button.btn.btn-outline-primary {
     background-position: center;
 }
 
+.inner-title2 {
+    position: relative;
+    height: 300px;
+    background-size: cover;
+    background-image: url(../images/home/box-flowers-green-garden-background.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 .inner-title-home {
     height: 755px;
 }
@@ -1491,7 +1501,7 @@ button.btn.btn-outline-primary {
     height: 100%;
     top: 0;
     left: 0;
-    /* background-color: var(--primary-color2); */
+    background-color: var(--primary-color2);
     opacity: 0.7;
 }
 
@@ -3130,6 +3140,61 @@ article.post .content-post .more-link a:hover {
     height: 50%;
     border-bottom-color: transparent;
 }
+
+/* .carousel-container {
+    position: relative;
+    overflow: hidden;
+    width: auto;
+  }
+  
+.carousel {
+    display: flex;
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .item {
+    flex: 0 0 calc(100% / 3);
+  }
+  
+  .carousel-prev,
+  .carousel-next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 40px;
+    height: 40px;
+    background-color: gray;
+    border: none;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    opacity: 0.7;
+  }
+  
+  .carousel-prev {
+    left: 0;
+  }
+  
+  .carousel-next {
+    right: 0;
+  }
+  
+  .carousel-prev:hover,
+  .carousel-next:hover {
+    opacity: 1;
+  }
+  
+  .carousel-prev:focus,
+  .carousel-next:focus {
+    outline: none;
+  }
+  
+  .carousel-prev:disabled,
+  .carousel-next:disabled {
+    opacity: 0.3;
+    cursor: not-allowed;
+  } 
+   */
 
 @-webkit-keyframes effect-2 {
     from {
