--- a/public/landing/stylesheet/style.css
+++ b/public/landing/stylesheet/style.css
@@ -861,17 +861,17 @@ a:focus {
     font-weight: 500;
     letter-spacing: -1px;
     line-height: 58px;
-    color: var(--primary-color);
+    color: var(--primary-color5);
 }
 
-#judul1{
+/* #judul1{
     font-family: 'Jost', sans-serif;
     font-size: 46px;
     font-weight: 500;
     letter-spacing: -1px;
     line-height: 58px;
     color: var(--primary-color2);
-}
+} */
 
 .angka-card{
 
@@ -1550,7 +1550,7 @@ button.btn.btn-outline-primary {
     z-index: 50;
     text-align: center;
     position: absolute;
-    
+
 }
 
 .page-title-heading {
