--- a/public/admin/css/dashlite.css
+++ b/public/admin/css/dashlite.css
@@ -2852,12 +2852,12 @@ div.dataTables_wrapper div.dataTables_filter .input-group.has-validation > .form
 }
 
 .btn-primary {
-  --bs-btn-color: #fff;
-  --bs-btn-bg: #854fff;
+  --bs-btn-color: white;
+  --bs-btn-bg: green;
   --bs-btn-border-color: #854fff;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #7143d9;
-  --bs-btn-hover-border-color: #6a3fcc;
+  --bs-btn-hover-bg: #7aed7a;
+  --bs-btn-hover-border-color: white;
   --bs-btn-focus-shadow-rgb: 151, 105, 255;
   --bs-btn-active-color: #fff;
   --bs-btn-active-bg: #6a3fcc;
@@ -6847,10 +6847,10 @@ div.dataTables_wrapper div.dataTables_filter .input-group.has-validation > .form
 }
 
 .link-primary {
-  color: #854fff !important;
+  color: greenyellow !important;
 }
 .link-primary:hover, .link-primary:focus {
-  color: #6a3fcc !important;
+  color: #7aed7a !important;
 }
 
 .link-secondary {
@@ -12562,7 +12562,7 @@ svg {
 }
 
 .bg-abstract {
-  background-image: linear-gradient(to right, #2c3782 calc(60% - 150px), #39469f calc(60% - 150px), #39469f 60%, #4856b5 60%, #4856b5 calc(60% + 150px), #5b6ac6 calc(60% + 150px), #5b6ac6 100%);
+  background-image: linear-gradient(to right, #2c3782 , #39469f calc(60% - 150px), #39469f 60%, #4856b5 60%, #4856b5 calc(60% + 150px), #5b6ac6 calc(60% + 150px), #5b6ac6 100%);
 }
 
 .bg-white-1 {
@@ -13930,7 +13930,7 @@ a.alert:hover {
 }
 
 .link-primary {
-  color: #854fff !important;
+  color: green !important;
 }
 
 .link-on-primary:hover {
@@ -29284,9 +29284,11 @@ body.nav-shown {
 }
 .logo-img {
   max-height: 36px;
+  margin-right: 10px;
 }
 .logo-img-lg {
-  max-height: 60px;
+  max-height: 200px;
+  
 }
 .logo-img-sm {
   max-height: 28px;
@@ -30252,6 +30254,7 @@ body.nav-shown {
     padding-left: 44px;
     padding-right: 44px;
   }
+
 }
 .nk-split {
   position: relative;
@@ -30264,6 +30267,7 @@ body.nav-shown {
   position: relative;
   flex-shrink: 0;
   min-height: 100%;
+  /* margin-left: 150px; */
 }
 @media (min-width: 768px) {
   .nk-split-content-md {
@@ -30272,7 +30276,8 @@ body.nav-shown {
 }
 .nk-split-stretch {
   flex-grow: 1;
-  flex-shrink: 1;
+  flex-shrink: 1.5;
+  /* margin-left: 150px; */
 }
 
 @media (max-width: 991.98px) {
