--- a/public/landing/stylesheet/style.css
+++ b/public/landing/stylesheet/style.css
@@ -1948,6 +1948,10 @@ article.article-4 {
     padding-left: 24px;
 }
 
+/* #emailHelp {
+    color: red;
+} */
+
 .content-blog-detail .input-yourname,
 .input-youremail,
 .input-yourmessage {
