--- a/public/landing/stylesheet/style.css
+++ b/public/landing/stylesheet/style.css
@@ -1948,11 +1948,7 @@ article.article-4 {
     padding-left: 24px;
 }
 
-/* #emailHelp {
-    color: red;
-} */
-
-.content-blog-detail .input-yourname,
+/*      .content-blog-detail .input-yourname,
 .input-youremail,
 .input-yourmessage {
     letter-spacing: 0.9px;
